welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: value ! is not a member of Boolean
while(estFaceMur()!){ while (!estSurBiscuit()){ recule()}
                  ^